--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>formBatista</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-<dependencies>
+    <dependencies>
 
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -27,6 +39,13 @@
         <artifactId>webdrivermanager</artifactId>
         <version>4.0.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>4.0.9</version>
+    </dependency>
+
 
 </dependencies>
 
